k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kap-members-db
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kap-members-db
  template:
    metadata:
      labels:
        app: kap-members-db
    spec:
      containers:
      - name: kap-members-db
        image: engincan/kap-members-db:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: kap-members-db
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 3001
    protocol: TCP
  selector:
    app: kap-members-db
