k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kap-members-db-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kap-members-db.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kap-members-db
            port:
              number: 5001
